# rust-zero2prod

./: .editorconfig  Cargo.toml  Dockerfile  spec.yaml
.sqlx/: query-1b2282b9643b2a8ddfeb944ba44d99880ddfef8f2babce9b0450310804243c8a.json
configuration/: base.yaml
migrations/: 20240607082133_create_subscriptions_table.sql
scripts/: init_db.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscription_confirm.rs  subscriptions.rs
src/routes/home/: home.html  mod.rs
src/routes/login/: login.html  post.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
